[gd_scene load_steps=9 format=3 uid="uid://ddtiu0a15nihn"]

[ext_resource type="Script" path="res://addons/card_engine/editor/data_table.gd" id="1_msvje"]
[ext_resource type="Script" path="res://addons/card_engine/editor/tab_cards.gd" id="1_xf2jx"]
[ext_resource type="PackedScene" uid="uid://daqnnffluqgsa" path="res://addons/card_engine/editor/data_table_column.tscn" id="2_ohnvg"]
[ext_resource type="PackedScene" uid="uid://bpuntfb77cqfe" path="res://addons/card_engine/editor/data_table_field_artwork.tscn" id="3_dto1r"]
[ext_resource type="Script" path="res://addons/card_engine/editor/card_details.gd" id="4_2j8jy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8rp17"]
bg_color = Color(0.211765, 0.239216, 0.290196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a0nfg"]
bg_color = Color(0.211765, 0.239216, 0.290196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hddqr"]
bg_color = Color(0.270588, 0.439216, 0.584314, 1)

[node name="Cards" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
script = ExtResource("1_xf2jx")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8rp17")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TopBar" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="ConfigRow" type="HBoxContainer" parent="PanelContainer/HBoxContainer/TopBar"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/TopBar/ConfigRow"]
layout_mode = 2
text = "Config:"

[node name="ConfigPathEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/TopBar/ConfigRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "res://card_engine_config.tres"
placeholder_text = "CardEngineConfig"
caret_blink = true
caret_blink_interval = 0.5

[node name="ReloadButton" type="Button" parent="PanelContainer/HBoxContainer/TopBar/ConfigRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Reload"

[node name="SearchRow" type="HBoxContainer" parent="PanelContainer/HBoxContainer/TopBar"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/TopBar/SearchRow"]
layout_mode = 2
text = "Search:"

[node name="SearchEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/TopBar/SearchRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "card name"
caret_blink = true
caret_blink_interval = 0.5

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Set:"

[node name="SetOptionButton" type="OptionButton" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "ALL_SETS"
popup/item_0/id = 0
popup/item_1/text = "Darkness"
popup/item_1/id = 1
popup/item_2/text = "Screet"
popup/item_2/id = 2

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Default Mana:"

[node name="DefaultManaOptionButton" type="OptionButton" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 7
selected = 0
popup/item_0/text = "Colorless"
popup/item_0/id = 0
popup/item_1/text = "Holy"
popup/item_1/id = 1
popup/item_2/text = "Curse"
popup/item_2/id = 2
popup/item_3/text = "Flame"
popup/item_3/id = 3
popup/item_4/text = "Frost"
popup/item_4/id = 4
popup/item_5/text = "Shock"
popup/item_5/id = 5
popup/item_6/text = "Gale"
popup/item_6/id = 6

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="NewCardButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "New Card
"

[node name="Split" type="VSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/autohide = 0
split_offset = 250

[node name="PanelContainer" type="PanelContainer" parent="Split"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a0nfg")

[node name="UpperPanel" type="ScrollContainer" parent="Split/PanelContainer"]
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 0

[node name="CardDataTable" type="ScrollContainer" parent="Split/PanelContainer/UpperPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = ExtResource("1_msvje")

[node name="VBoxContainer" type="MarginContainer" parent="Split/PanelContainer/UpperPanel/CardDataTable"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HighlightPanel" type="Panel" parent="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hddqr")

[node name="Columns" type="HBoxContainer" parent="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DataTableColumnSet" parent="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer/Columns" instance=ExtResource("2_ohnvg")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
header_text = "Set"
resource_key = "cardset_name"

[node name="DataTableColumnId" parent="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer/Columns" instance=ExtResource("2_ohnvg")]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
header_text = "ID"
resource_key = "cardset_idx"
is_editable = true

[node name="DataTableColumnName" parent="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer/Columns" instance=ExtResource("2_ohnvg")]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
header_text = "Name"
resource_key = "card_name"
is_editable = true

[node name="DataTableColumnMana" parent="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer/Columns" instance=ExtResource("2_ohnvg")]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
header_text = "Mana"
resource_key = "mana"
is_editable = true

[node name="DataTableColumnKind" parent="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer/Columns" instance=ExtResource("2_ohnvg")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
header_text = "Kind"
resource_key = "kind"
is_editable = true

[node name="DataTableColumnUnitHP" parent="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer/Columns" instance=ExtResource("2_ohnvg")]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
header_text = "Unit HP"
resource_key = "unit_hp"
is_editable = true

[node name="DataTableColumnLevel" parent="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer/Columns" instance=ExtResource("2_ohnvg")]
layout_mode = 2
header_text = "Level"
resource_key = "level"
is_editable = true

[node name="DataTableColumnManaValue" parent="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer/Columns" instance=ExtResource("2_ohnvg")]
layout_mode = 2
header_text = "Mana Value"
resource_key = "mana_value"
is_editable = true

[node name="DataTableColumnArtwork" parent="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer/Columns" instance=ExtResource("2_ohnvg")]
layout_mode = 2
size_flags_horizontal = 3
header_text = "Artwork"
resource_key = "artwork_path"
is_editable = true
is_last = true
data_table_field_scene = ExtResource("3_dto1r")

[node name="DataTablePopupMenu" type="PopupMenu" parent="Split/PanelContainer/UpperPanel/CardDataTable"]
unique_name_in_owner = true
size = Vector2i(176, 100)
item_count = 2
item_0/text = "Show in FileSystem"
item_0/id = 0
item_1/text = "Delete"
item_1/id = 1

[node name="CardDetails" type="HSplitContainer" parent="Split"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/autohide = 0
split_offset = 880
script = ExtResource("4_2j8jy")

[node name="CardDetailsTabContainer" type="TabContainer" parent="Split/CardDetails"]
unique_name_in_owner = true
layout_mode = 2

[node name="Design" type="VBoxContainer" parent="Split/CardDetails/CardDetailsTabContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Split/CardDetails/CardDetailsTabContainer/Design"]
layout_mode = 2

[node name="Label" type="Label" parent="Split/CardDetails/CardDetailsTabContainer/Design/HBoxContainer"]
layout_mode = 2
text = "Notes"

[node name="Control" type="Control" parent="Split/CardDetails/CardDetailsTabContainer/Design/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveIndicator" type="Label" parent="Split/CardDetails/CardDetailsTabContainer/Design/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.384314, 0.384314, 0.384314, 1)
theme_override_font_sizes/font_size = 10
text = "saved"

[node name="DesignNotesTextEdit" type="TextEdit" parent="Split/CardDetails/CardDetailsTabContainer/Design"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "design notes"
editable = false

[node name="ï¼‹" type="Control" parent="Split/CardDetails/CardDetailsTabContainer"]
visible = false
layout_mode = 2

[node name="CardPreviewContainer" type="MarginContainer" parent="Split/CardDetails"]
unique_name_in_owner = true
layout_mode = 2

[node name="NotesSaveTimer" type="Timer" parent="Split/CardDetails"]
unique_name_in_owner = true
one_shot = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/TopBar/ConfigRow/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="text_submitted" from="PanelContainer/HBoxContainer/TopBar/SearchRow/SearchEdit" to="." method="_on_search_edit_text_submitted"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/SetOptionButton" to="." method="_on_set_option_button_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/NewCardButton" to="." method="_on_new_card_button_pressed"]
[connection signal="delete_requested" from="Split/PanelContainer/UpperPanel/CardDataTable" to="." method="_on_card_data_table_delete_requested"]
[connection signal="row_clicked" from="Split/PanelContainer/UpperPanel/CardDataTable" to="." method="_on_card_data_table_row_clicked"]
[connection signal="show_in_filesystem_requested" from="Split/PanelContainer/UpperPanel/CardDataTable" to="." method="_on_card_data_table_show_in_filesystem_requested"]
[connection signal="double_clicked" from="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer/Columns/DataTableColumnSet" to="." method="_on_data_table_column_set_double_clicked"]
[connection signal="saved" from="Split/PanelContainer/UpperPanel/CardDataTable/VBoxContainer/Columns/DataTableColumnId" to="." method="_on_data_table_column_id_saved"]
[connection signal="id_pressed" from="Split/PanelContainer/UpperPanel/CardDataTable/DataTablePopupMenu" to="Split/PanelContainer/UpperPanel/CardDataTable" method="_on_data_table_popup_menu_id_pressed"]
[connection signal="edit_script_requested" from="Split/CardDetails" to="." method="_on_card_details_edit_script_requested"]
[connection signal="tab_selected" from="Split/CardDetails/CardDetailsTabContainer" to="Split/CardDetails" method="_on_card_details_tab_container_tab_selected"]
[connection signal="focus_exited" from="Split/CardDetails/CardDetailsTabContainer/Design/DesignNotesTextEdit" to="Split/CardDetails" method="_on_design_notes_text_edit_focus_exited"]
[connection signal="text_changed" from="Split/CardDetails/CardDetailsTabContainer/Design/DesignNotesTextEdit" to="Split/CardDetails" method="_on_design_notes_text_edit_text_changed"]
[connection signal="timeout" from="Split/CardDetails/NotesSaveTimer" to="Split/CardDetails" method="_on_notes_save_timer_timeout"]
